# webrtc-tutorial

./: README.md  https-crow-server.sh  private.csr  private.key  public.crt  public.key  ssl.conf
client/: README.md  simple-https-server.py  webrtc_client.html  webrtc_dev.html  webrtc_offer_client.html  webrtc_pc1.html  webrtc_pc2.html  webrtc_recv_dev.html  webrtc_recv_dev_temp.html  webrtc_self.html  webrtc_self_reverse.html  webrtc_send_dev.html  wsstest.html
server/: CMakeLists.txt  WebSocketServer.hpp  main.cpp
server/python/sendrecv/: simple_answer.py  simple_offer.py  webrtc_sendrecv.py
server/python/webrtc_server/: server.crt  server.csr  server.key  webrtc_recv_server.py  webrtc_send_server.py  webrtc_wss_server.py
server/python/wss_server/: test.py
